--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "https://github.com/Gamote/cert127.git"
   },
-  "keywords": ["cert127", "makecert", "certificate", "ssl", "https", "tls", "local", "development", "mkcert", "127"],
+  "keywords": ["cert127", "makecert", "certificate", "ssl", "https", "tls", "local", "development", "mkcert", "127", "trusted"],
   "scripts": {
     "build": "rm -rf dist && tsc",
     "start": "node dist/index.js"
