--- a/package.json
+++ b/package.json
@@ -12,15 +12,29 @@
     "type": "git",
     "url": "https://github.com/Gamote/cert127.git"
   },
-  "keywords": ["cert127", "makecert", "certificate", "ssl", "https", "tls", "local", "development", "mkcert", "127", "trusted"],
+  "keywords": [
+    "cert127",
+    "makecert",
+    "certificate",
+    "ssl",
+    "https",
+    "tls",
+    "local",
+    "development",
+    "mkcert",
+    "127",
+    "trusted"
+  ],
   "scripts": {
     "build": "rm -rf dist && tsc",
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "typescript": "^4.9.3"
+    "mkcert": "^1.5.1",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@types/node": "^18.11.9"
+    "@types/mkcert": "^1.2.0",
+    "@types/node": "^18.11.15"
   }
 }
